<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_forecast_hours"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ah.creativecodeapps.tiempo.ForecastHoursActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/titleLayout"
        android:background="@color/colorNight">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_arrow_back"
            android:id="@+id/btnBack"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:padding="15dp"
            />

        <TextView
            android:text="@string/comparing"
            android:layout_height="match_parent"
            android:id="@+id/txtCity"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLayout"
        android:layout_marginTop="10dp"
        android:id="@+id/txtCities"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtCity1"
            android:layout_weight="1"
            android:background="@drawable/customtxtborder"
            android:padding="7dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/hint_entercity1"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtCity2"
            android:layout_weight="1"
            android:background="@drawable/customtxtborder"
            android:padding="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/hint_entercity2"
            android:textAlignment="center" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/compareList"
        android:layout_below="@id/txtCities"
        android:layout_above="@+id/adView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <com.google.android.gms.ads.NativeExpressAdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adUnitId= "@string/banner_ad_unit_id"
        ads:adSize="@string/banner_size"
        android:layout_alignParentBottom="true">
    </com.google.android.gms.ads.NativeExpressAdView>
</RelativeLayout>
